Closed
Bug 671936
Opened 14 years ago
Closed 14 years ago
threading gets worse when a search folder combining IMAP Inbox and Sent is reopened
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 10.0
People
(Reporter: al_9x, Assigned: Bienvenu)
References
(Blocks 1 open bug)
Details
(Keywords: testcase)
Attachments
(2 files, 3 obsolete files)
|
8.87 KB,
application/octet-stream
|
Details | |
|
8.34 KB,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
this is about a search folder showing all messages from IMAP inbox and sent, threaded and sorted by date (or received), ascending
for the purpose of this bug I'll define "correct threading" as the one that is produced by either
a. toggling threading off and on
or
b. re-sorting the folder (i.e. two distinct clicks on the header of the sort by column)
this "correct threading" not perfect, but it's the best that TB can do at the moment.
After establishing "correct threading" reopen the folder (switch to another one and back). Threading gets screwed up in most or all threads.
Example:
out1
..in1
....out2
....out3
......in2
turns into:
out1
..in1
....in2
....out2
....out3
"correct threading" can be reestablished, but will get screwed again up on the next reopen
| Assignee | ||
Comment 1•14 years ago
|
||
Since I'm not seeing this behavior, your best bet would be to create two local folders (corresponding to sent and inbox in your example), and a saved search over the local folders that exhibits the bug, and then attach the two local folders to this bug.
I can give you very specific direction to repro this in a new profile, you should be able to see it.
1. xp sp3 (shouldn't matter), TB 5.0, new profile
2. create a test yahoo mail account (takes 1 minute)
3. start TB add the yahoo account as IMAP
4. create a saved search folder:
Name: Threads
Sub-folder of: yahoo imap account
Choose: Inbox, Sent
Search Online: unchecked
Match all messages
5. thread the folder, make sure it's sorted by date, descending (should be the default)
6. in TB, from this new account, send to your existing account (and reply), till you build the following thread (I am showing the correct structure, TB will start threading it wrong at some point):
out1
..in1
....out2
....out3
......in2
7. once built, re-sort the folder to make sure it's threaded right
8. reopen the search folder (switch away and back or restart TB)
9. now the thread looks like this:
out1
..in1
....in2
....out2
....out3
David, this problem is real and fairly easy to repro, why are you ignoring it?
| Assignee | ||
Comment 5•14 years ago
|
||
I've tried and failed to reproduce it. But if you can create two local folders and a saved search across them that reproduces the problem, as I said earlier, I'd be happy to look at it.
(In reply to comment #5)
> I've tried and failed to reproduce it. But if you can create two local
> folders and a saved search across them that reproduces the problem, as I
> said earlier, I'd be happy to look at it.
Are you actually using my directions from Comment 2? Because when I follow them from scratch I can repro consistently.
| Assignee | ||
Comment 7•14 years ago
|
||
yes.
Please (In reply to comment #8)
> I sent you an email.
Did you get it?
| Assignee | ||
Comment 10•14 years ago
|
||
Nope, mail server gateway may have quarantined it, especially if it's a zip file.
| Reporter | ||
Comment 11•14 years ago
|
||
| Reporter | ||
Comment 12•14 years ago
|
||
(In reply to comment #10)
> Nope, mail server gateway may have quarantined it, especially if it's a zip
> file.
I uploaded the folders here.
About the email, it did not have attachments, was just a question. If my email is being bounced I would like to resolve that, as sometimes there is need for it. I will send you another message, if you don't receive it (check spam folder or whatever), please let me know who at Mozilla can help with that.
| Reporter | ||
Comment 13•14 years ago
|
||
(In reply to comment #5)
> I've tried and failed to reproduce it. But if you can create two local
> folders and a saved search across them that reproduces the problem, as I
> said earlier, I'd be happy to look at it.
Please look at it.
| Assignee | ||
Comment 14•14 years ago
|
||
this doesn't quite work, but it shows the path forward on this issue. Essentially, we need to check sub-threads for messages that a new msg might be the parent of, and adjust the thread accordingly.
Assignee: nobody → dbienvenu
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 15•14 years ago
|
||
this seems to generally work. I need to add a unit test, and make sure the existing unit tests pass.
Attachment #561481 -
Attachment is obsolete: true
| Assignee | ||
Comment 16•14 years ago
|
||
This unit test fails (I believe correctly) with this bug.
Unfortunately, the prev proposed fix to the core code isn't quite right, so I need to tweak it a bit.
| Assignee | ||
Comment 17•14 years ago
|
||
ok, this is all working now. JB was complaining about this bug earlier, so it would be nice to get it fixed.
Attachment #563189 -
Attachment is obsolete: true
Attachment #564719 -
Attachment is obsolete: true
Attachment #565088 -
Flags: review?(mbanner)
Updated•14 years ago
|
Attachment #565088 -
Flags: review?(mbanner) → review+
| Assignee | ||
Comment 18•14 years ago
|
||
fixed on trunk - http://hg.mozilla.org/comm-central/rev/9b23a4e3f4b3
jb, this is the threading issue you were seeing in the unified inbox a while ago.
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 10.0
| Reporter | ||
Comment 19•13 years ago
|
||
I am still seeing screwed up threading (fixabled be a resort), though seemingly no longer triggered by simply opening the folder, but the addition of new messages to a thread while the folder is open.
Does your fixed threading code get invoked when a thread grows?
You need to log in
before you can comment on or make changes to this bug.
Description
•