fix xf view threading issues when messages arrive out of order, r=standard8, bug 671936